# quant-trading-platform

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
configs/: backtest.yaml  pipeline.yaml  reporting.yaml  trading_calendar.yaml  universes.yaml
configs/strategies/: cross_sectional.yaml  etf_rotation.yaml  theme_rotation.yaml
deploy/docker/: Dockerfile  crontab
docs/: ai-evaluation.md  architecture.md  data-contract.md  development-todo.md  index.md  operations.md  strategy-guide.md
scripts/: backtest_v2.py
src/quant_trading/: __init__.py  config.py
src/quant_trading/cli/: __init__.py  data.py  main.py  research.py
src/quant_trading/data/: __init__.py  calendar.py  features.py  migration.py  pipeline.py  providers.py  readiness.py  snapshot.py  stock_pipeline.py  storage.py  validation.py
src/quant_trading/models/: __init__.py  bar.py  order.py  position.py  signal.py  trade.py
src/quant_trading/reporting/: __init__.py  ai_evaluation.py  reports.py
src/quant_trading/research/: __init__.py  backtest.py  factors.py  portfolio.py  strategy.py  strategy_registry.py  universe.py
src/quant_trading/research/strategies/: __init__.py
src/quant_trading/research/strategies/cross_sectional/: __init__.py  config.py  strategy.py
src/quant_trading/research/strategies/etf_rotation/: __init__.py  config.py  strategy.py  v2_config.py  v2_strategy.py
src/quant_trading/research/strategies/theme_rotation/: __init__.py  config.py  strategy.py
