[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-trading-platform"
version = "0.1.0"
description = "A 股量化研究与数据质量平台"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "duckdb>=1.3,<2",
    "filelock>=3.13,<4",
    "pandas>=2.2,<3",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "pyarrow>=18,<22",
    "pytdx>=1.72,<2",
    "pyyaml>=6.0.2,<7",
    "requests>=2.32,<3",
    "tenacity>=9,<10",
    "typer>=0.16,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.17,<2",
    "pandas-stubs>=2.2,<3",
    "ruff>=0.12,<1",
    "types-pyyaml>=6.0.12,<7",
]
market = [
    "baostock>=0.9.3,<1",
    "lxml>=5,<7",
]

[project.scripts]
quant = "quant_trading.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_trading"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/quant_trading"]
